<?xml version="1.0"?>
<package>
  <name>cape_ros</name>
  <version>1.0.5</version>
  <description>ROS wrapper for CAPE plane and cylinder extraction</description>
  <maintainer email="afakih@avidbots.com">Adel Fakih</maintainer>
  <license>GPL-3.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>shape_msgs</run_depend>
</package>
